chore: add open/close git scripts + ignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 ﻿jdk-21/
-jdk-21.zip
-jdk-*.zip
 jdk-*/
 *.zip
-maven/
+*.7z
+*.rar
+node_modules/
+**/node_modules/
 target/
+**/target/
 *.log
 *.tmp
-Thumbs.db
 .DS_Store
-
- 
- 
+Thumbs.db
+.idea/
+.vscode/
+dist/
+build/
+out/
