--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -119,6 +119,13 @@
             <version>1.3.30</version>
         </dependency>
 
+        <!-- Apache POI for Excel Import -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
