--- a/backend/.classpath
+++ b/backend/.classpath
@@ -132,6 +132,16 @@
   <classpathentry kind="var" path="M2_REPO/com/bucket4j/bucket4j-core/8.7.0/bucket4j-core-8.7.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/github/librepdf/openpdf/1.3.30/openpdf-1.3.30.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/poi/poi/5.2.5/poi-5.2.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-collections4/4.4/commons-collections4-4.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.15.0/commons-io-2.15.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/zaxxer/SparseBitSet/1.3/SparseBitSet-1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/poi/poi-ooxml/5.2.5/poi-ooxml-5.2.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/poi/poi-ooxml-lite/5.2.5/poi-ooxml-lite-5.2.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/5.2.0/xmlbeans-5.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-compress/1.25.0/commons-compress-1.25.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/github/virtuald/curvesapi/1.08/curvesapi-1.08.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-test/3.2.0/spring-boot-starter-test-3.2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test/3.2.0/spring-boot-test-3.2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test-autoconfigure/3.2.0/spring-boot-test-autoconfigure-3.2.0.jar"/>
