Fix: Corrección de envío de Ausencias y Solicitudes, errores 400/401 y habilitación de Bypass Auth (Keycloak Offline)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "automatic",
     "css.lint.unknownAtRules": "ignore",
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.project.sourcePaths": [
+        "backend/src/main/java"
+    ],
+    "java.project.outputPath": "backend/target/classes",
+    "java.project.referencedLibraries": [
+        "backend/target/**/*.jar"
+    ]
 }
