--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -64,12 +64,16 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- H2 Database (Dev Mode) -->
+
+        <!-- H2 Database (Dev Mode) DESHABILITADO TEMPORALMENTE -->
+        <!--
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        -->
+
 
         <!-- Lombok -->
         <dependency>
@@ -119,6 +123,10 @@
             <version>1.3.30</version>
         </dependency>
 
+
+        
+
+
         <!-- Apache POI for Excel Import -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -154,6 +162,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <parameters>true</parameters>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
