--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,8 +27,8 @@ spring:
     
     # HikariCP Configuration
     hikari:
-      maximum-pool-size: 10
-      minimum-idle: 5
+      maximum-pool-size: 20
+      minimum-idle: 10
       connection-timeout: 30000
       idle-timeout: 600000
       max-lifetime: 1800000
@@ -38,23 +38,32 @@ spring:
   # JPA / HIBERNATE
   # ============================================
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MariaDBDialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-    show-sql: false
+      ddl-auto: update  # Conservar esquema y datos corregidos
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
         jdbc:
-          batch_size: 20
+          batch_size: 50
+          fetch_size: 100
         order_inserts: true
         order_updates: true
-        generate_statistics: false
+
+  sql:
+    init:
+      mode: never  # Deshabilitado - usando DataSeeder.java
+
+  # ============================================
+  # JACKSON
+  # ============================================
+  jackson:
+    date-format: yyyy-MM-dd
+    serialization:
+      write-dates-as-timestamps: false
   
   # ============================================
   # SECURITY - OAuth2 Resource Server
@@ -131,7 +140,7 @@ app:
 
   # CORS (USADO POR SecurityConfig -> @Value("${app.cors.allowed-origins}")
   cors:
-    allowed-origins: "http://localhost:3000,http://127.0.0.1:3000"
+    allowed-origins: "http://localhost:3000,http://127.0.0.1:3000,http://localhost:3001"
     allowed-methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
     allowed-headers: "*"
     allow-credentials: true
@@ -142,3 +151,13 @@ app:
   # ============================================
   file-storage:
     base-path: "uploads"
+
+# ============================================
+# WEB PUSH CONFIGURATION
+# ============================================
+webpush:
+  vapid:
+    subject: "mailto:admin@coopreducto.com.py"
+    public-key: "BGpqIUsge2r8S41cZCqB4O1bb_GtdKn9a9lWQZoXgJFgiAS_q9s8ReFT0lhBqZVB2Yko36N-m4IUrtUaZpG7RX4"
+    private-key: "HIYNHTRIOo8lyQXQzAi8HBMhW6WnADVyEdMuEdFluAk"
+
