--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -127,6 +127,18 @@
         
 
 
+        <!-- Web Push / VAPID -->
+        <dependency>
+            <groupId>nl.martijndwars</groupId>
+            <artifactId>web-push</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
+        </dependency>
+
         <!-- Apache POI for Excel Import -->
         <dependency>
             <groupId>org.apache.poi</groupId>
