Restoration of system, Next.js upgrade to 16.1.1, and CMR module expansion with service provider management

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,7 @@
     <version>1.0.0</version>
     <name>Sistema TTHH - Backend</name>
     <description>Backend de gestión de talento humano para Cooperativa Reducto</description>
+    <!-- Force IDE Reload -->
 
     <properties>
         <java.version>21</java.version>
