--- a/backend/.classpath
+++ b/backend/.classpath
@@ -83,7 +83,6 @@
   <classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/42.6.0/postgresql-42.6.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/checkerframework/checker-qual/3.31.0/checker-qual-3.31.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/mysql/mysql-connector-j/8.1.0/mysql-connector-j-8.1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/h2database/h2/2.2.224/h2-2.2.224.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/projectlombok/lombok/1.18.30/lombok-1.18.30.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mapstruct/mapstruct/1.5.5.Final/mapstruct-1.5.5.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mapstruct/mapstruct-processor/1.5.5.Final/mapstruct-processor-1.5.5.Final.jar"/>
@@ -116,7 +115,6 @@
   <classpathentry kind="var" path="M2_REPO/software/amazon/awssdk/apache-client/2.21.0/apache-client-2.21.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpclient/4.5.13/httpclient-4.5.13.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore/4.4.16/httpcore-4.4.16.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.16.0/commons-codec-1.16.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/software/amazon/awssdk/netty-nio-client/2.21.0/netty-nio-client-2.21.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/io/netty/netty-codec-http/4.1.101.Final/netty-codec-http-4.1.101.Final.jar"/>
@@ -132,6 +130,23 @@
   <classpathentry kind="var" path="M2_REPO/com/bucket4j/bucket4j-core/8.7.0/bucket4j-core-8.7.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/github/librepdf/openpdf/1.3.30/openpdf-1.3.30.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/martijndwars/web-push/5.1.1/web-push-5.1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/beust/jcommander/1.78/jcommander-1.78.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpasyncclient/4.1.5/httpasyncclient-4.1.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore-nio/4.4.16/httpcore-nio-4.4.16.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/asynchttpclient/async-http-client/2.10.4/async-http-client-2.10.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/asynchttpclient/async-http-client-netty-utils/2.10.4/async-http-client-netty-utils-2.10.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/activation/javax.activation/1.2.0/javax.activation-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-codec-socks/4.1.101.Final/netty-codec-socks-4.1.101.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-handler-proxy/4.1.101.Final/netty-handler-proxy-4.1.101.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-transport-native-epoll/4.1.101.Final/netty-transport-native-epoll-4.1.101.Final-linux-x86_64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-transport-native-kqueue/4.1.101.Final/netty-transport-native-kqueue-4.1.101.Final-osx-x86_64.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-transport-classes-kqueue/4.1.101.Final/netty-transport-classes-kqueue-4.1.101.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-resolver-dns/4.1.101.Final/netty-resolver-dns-4.1.101.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty-codec-dns/4.1.101.Final/netty-codec-dns-4.1.101.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/typesafe/netty/netty-reactive-streams/2.0.3/netty-reactive-streams-2.0.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/bitbucket/b_c/jose4j/0.7.0/jose4j-0.7.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/bouncycastle/bcprov-jdk15on/1.70/bcprov-jdk15on-1.70.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/poi/poi/5.2.5/poi-5.2.5.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-collections4/4.4/commons-collections4-4.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar"/>
@@ -142,6 +157,9 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/5.2.0/xmlbeans-5.2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-compress/1.25.0/commons-compress-1.25.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/github/virtuald/curvesapi/1.08/curvesapi-1.08.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/jsonwebtoken/jjwt-api/0.12.3/jjwt-api-0.12.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/jsonwebtoken/jjwt-impl/0.12.3/jjwt-impl-0.12.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/jsonwebtoken/jjwt-jackson/0.12.3/jjwt-jackson-0.12.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-test/3.2.0/spring-boot-starter-test-3.2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test/3.2.0/spring-boot-test-3.2.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test-autoconfigure/3.2.0/spring-boot-test-autoconfigure-3.2.0.jar"/>
