--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
   # DATASOURCE - MySQL (XAMPP)
   # ============================================
   datasource:
-    url: jdbc:mysql://localhost:3306/sistema_tthh?useSSL=false&serverTimezone=America/Asuncion&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3307/sistema_tthh?useSSL=false&serverTimezone=America/Asuncion&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -41,7 +41,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update  # Conservar esquema y datos corregidos
+      ddl-auto: update  # Forzar recreación limpia -> update para persistencia
     show-sql: true
     properties:
       hibernate:
